src/test/deca/codegen/valid/no-objects/print_multiple_int.ass
	TSTO #6
	BOV StackOverflowError
; Main program
; Beginning of main function:
	ADDSP #1
	LOAD #1, R0
	STORE R0, 1(GB)
	ADDSP #1
	LOAD #2, R0
	STORE R0, 2(GB)
	ADDSP #1
	LOAD #3, R0
	STORE R0, 3(GB)
	ADDSP #1
	LOAD #4, R0
	STORE R0, 4(GB)
	ADDSP #1
	LOAD #5, R0
	STORE R0, 5(GB)
	ADDSP #1
	LOAD #1000000, R0
	STORE R0, 6(GB)
	LOAD 1(GB), R0
	LOAD R0, R1
	WINT
	WNL
	LOAD 2(GB), R0
	LOAD R0, R1
	WINT
	WNL
	LOAD 3(GB), R0
	LOAD R0, R1
	WINT
	WNL
	LOAD 4(GB), R0
	LOAD R0, R1
	WINT
	WNL
	LOAD 5(GB), R0
	LOAD R0, R1
	WINT
	WNL
	LOAD 6(GB), R0
	LOAD R0, R1
	WINT
	WNL
; End of main function.
	HALT
; End of main function.
DivisionByZeroError:
	WSTR "Erreur : divison par zéro."
	WNL
	ERROR
StackOverflowError:
	WSTR "Erreur : débordement de la pile."
	WNL
	ERROR
