src/test/deca/codegen/invalid/no-objects/divide_by_zero.ass
	TSTO #0
	BOV StackOverflowError
; Main program
; Beginning of main function:
	LOAD #5, R0
	LOAD R0, R2
	LOAD #0, R0
	LOAD R2, R1
	CMP #0, R0
	BEQ DivisionByZeroError
	QUO R1, R0
	LOAD R0, R1
	WINT
	WNL
; End of main function.
	HALT
; End of main function.
DivisionByZeroError:
	WSTR "Erreur : divison par zéro."
	WNL
	ERROR
StackOverflowError:
	WSTR "Erreur : débordement de la pile."
	WNL
	ERROR
